# UCSD-AS-IGA

./: .gitignore  Pipfile  README.md  pyproject.toml
asiga/: __init__.py  scraper.py
asone/: __init__.py  scraper.py
