[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucsdasone"
version = "1.0.0-a.1"
description = "A web scraper for the UCSD AS One grade archive"
readme = "README.md"
authors = [ { name = "Jacob Lee", email = "Jacob.J.Lee@outlook.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.5"

[project.urls]
homepage = "https://github.com/JacobLee23/UCSDASOne"

[tool.setuptools.packages.find]
where = ["."]
include = ["asone*"]